# birthday_bot

./: .gitignore  Cargo.toml  README.md  sample.json
src/: args.rs  birthday.rs  main.rs  state.rs  tasks.rs  utils.rs
src/handles/: admin.rs  common.rs  document.rs  maintainer.rs  mod.rs
