[package]
name = "birthday_bot"
version = "0.1.0"
edition = "2021"
desription = "A Telegram bot that sends birthday reminders"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tempfile = { version = "0.4.0" }
chrono = { version = "0.4.31" }
log = { version = "0.4" }
pretty_env_logger = { version = "0.5.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "fs"] }